Update 'sv2mp1pn2-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:b750b6ad763829e87c246f66a875f85100448b41@sha256:17349444ddfc7abb1d1f20f250c09a6eed37529ea8f06de3e519c9779bf56acf

--- a/components/sv2mp1pn2-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/sv2mp1pn2-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sv2mp1pn2-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:b750b6ad763829e87c246f66a875f85100448b41@sha256:17349444ddfc7abb1d1f20f250c09a6eed37529ea8f06de3e519c9779bf56acf
+          name: container-image
